--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
@@ -23,9 +24,13 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.3.1",
+    "react-native-shared-element": "0.8.4",
+    "react-native-skeleton-placeholder": "^5.2.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
+    "react-navigation-shared-element": "^3.1.3",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
