--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.2",
     "expo": "~46.0.16",
+    "expo-cli": "^6.0.6",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
